--- a/index.html
+++ b/index.html
@@ -3,10 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="style.css">
     <title>Cofla 1</title>
 </head>
 <body>
-    
-    <script src="code5.js"></script>
+    <h1 class ="titulo">SANTIAGO</h1>
+    <script src="code7.js"></script>
 </body>
 </html>
