edit code7.js, index.html and style.css

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Cofla 1</title>
 </head>
 <body>
-    <h1 class ="titulo">SANTIAGO</h1>
+    <div class="contenedor"></div>
     <script src="code7.js"></script>
 </body>
 </html>
